# tch-rs-amd-gpu

torch-sys/: Cargo.toml  build.rs
torch-sys/libtch/: CMakeLists.txt  build.sh  example.cpp  example2.cpp  torch_api.cpp  torch_api.h
